test/tests/stages/16_characters_and_strings/valid/strings_as_initializers/adjacent_strings_in_initializer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: strcmp
        List[2]: 
          TIdentifier: s1
          TIdentifier: s2
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Pointer: 
              Char: 
            Pointer: 
              Char: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: multi_string
                  CSingleInit: 
                    CString: 
                      CStringLiteral: 
                        List[5]: 
                          TChar: 121
                          TChar: 101
                          TChar: 115
                          TChar: 110
                          TChar: 111
                      None: 
                    None: 
                  Array: 
                    TLong: 6
                    Char: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: nested_multi_string
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[2]: 
                              TChar: 97
                              TChar: 98
                          None: 
                        None: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[2]: 
                              TChar: 99
                              TChar: 100
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 2
                    Array: 
                      TLong: 3
                      Char: 
                  None: 
            CS: 
              CIf: 
                CFunctionCall: 
                  TIdentifier: strcmp
                  List[2]: 
                    CVar: 
                      TIdentifier: multi_string
                      None: 
                    CString: 
                      CStringLiteral: 
                        List[5]: 
                          TChar: 121
                          TChar: 101
                          TChar: 115
                          TChar: 110
                          TChar: 111
                      None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CIf: 
                CFunctionCall: 
                  TIdentifier: strcmp
                  List[2]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: nested_multi_string
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    CString: 
                      CStringLiteral: 
                        List[2]: 
                          TChar: 97
                          TChar: 98
                      None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                None: 
            CS: 
              CIf: 
                CFunctionCall: 
                  TIdentifier: strcmp
                  List[2]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: nested_multi_string
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    CString: 
                      CStringLiteral: 
                        List[2]: 
                          TChar: 99
                          TChar: 100
                      None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
