test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_too_long_nested_static.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: array
        CCompoundInit: 
          List[2]: 
            CSingleInit: 
              CString: 
                CStringLiteral: 
                  List[1]: 
                    TChar: 97
                None: 
              None: 
            CSingleInit: 
              CString: 
                CStringLiteral: 
                  List[4]: 
                    TChar: 98
                    TChar: 99
                    TChar: 100
                    TChar: 101
                None: 
              None: 
          None: 
        Array: 
          TLong: 3
          Array: 
            TLong: 3
            Char: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
